@@ -21,6 +21,8 @@
 *
 
 - "Convert to hexadecimal string" option for SNMP table columns
+- Fixed issues:
+	NX-1455 (Zone UIN in NXSL function CreateNode)
 
 
 *
